# GodelScript

./: CMakeLists.txt  README.md
examples/: IsPrime.godel  Multiply.godel  Subtract.godel  WhileTrue.godel
include/: Compose.hpp  Constant.hpp  Expression.hpp  Function.hpp  Id.hpp  Min.hpp  Namespace.hpp  Recur.hpp  StringFunctions.hpp  Succ.hpp  SymbolQueue.hpp
src/: Compose.cpp  Constant.cpp  Expression.cpp  Id.cpp  Main.cpp  Min.cpp  Namespace.cpp  Recur.cpp  StringFunctions.cpp  Succ.cpp  SymbolQueue.cpp
tests/: CMakeLists.txt  ExamplesTest.cpp  ExpressionTest.cpp  SymbolQueueTest.cpp
